BUG: - new synonym create word and part, but don't couple part with word + don't create a prefix
- add prefixes for new synonym

TODO:
-SynonymService.createWordWithPartAndSynonym
-    // TODO: 04.11.2022 bug -> not coupled a(c) with existed b(c)
-    // TODO: 15.11.2022 move this method to Synonym Api Service (decorator)

REPO:
- SynonymRepo (with its tests)

MODEL:
- split synonyms and antonyms to two tables(DONE)